--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <ul class="smenu">
         <li><a href="#" class="menul actual-link">Главная</a></li>
         <li>
-          <a href="../site/pages/students.html" class="menul">Студенты</a>
+          <a href="./pages/students.html" class="menul">Студенты</a>
         </li>
         <li>
-          <a href="../site/pages/whecourse.html" class="menul">О курсе</a>
+          <a href="./pages/whecourse.html" class="menul">О курсе</a>
         </li>
         <li>
-          <a href="../site/pages/contacts.html" class="menul">Контакты</a>
+          <a href="./pages/contacts.html" class="menul">Контакты</a>
         </li>
       </ul>
       <a href="" class="login-but">Войти</a>
