--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -19,9 +19,9 @@
     <header class="hdr">
       <img src="../img/logo.svg" alt="Логотип сайта" >
       <ul class="smenu">
-        <li><a href="./pages/index.html" class="menul">Главная</a></li>
-        <li><a href="./pages/students.html" class="menul">Студенты</a></li>
-        <li><a href="./pages/whecourse.html" class="menul">О курсе</a></li>
+        <li><a href="./index.html" class="menul">Главная</a></li>
+        <li><a href="./students.html" class="menul">Студенты</a></li>
+        <li><a href="./whecourse.html" class="menul">О курсе</a></li>
         <li><a href="#" class="menul actual-link">Контакты</a></li>
       </ul>
       <a href="" class="login-but">Войти</a>
