--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -19,7 +19,7 @@
     <header class="hdr">
       <img src="../img/logo.svg" alt="Логотип сайта" >
       <ul class="smenu">
-        <li><a href="./index.html" class="menul">Главная</a></li>
+        <li><a href="../index.html" class="menul">Главная</a></li>
         <li><a href="./students.html" class="menul">Студенты</a></li>
         <li><a href="./whecourse.html" class="menul">О курсе</a></li>
         <li><a href="#" class="menul actual-link">Контакты</a></li>
